--- a/index.html
+++ b/index.html
@@ -248,7 +248,10 @@
                   <h3>Operational Security</h3>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                    The implementation of an effective operational security program ensures that there is no inadvertent exposure to sensitive information 
+or classified information relating to the activities, intentions or capacities of your organization.
+Without OPSEC your organization may suffer death by thousands of cuts. It is not just one piece of information that causes damage; 
+it is the accumulation of data over time that enables attackers to gather enough information to launch a cyber attack.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
@@ -261,7 +264,10 @@
                   <h3>Network Security</h3>
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                    It is about securing the infrastructure of the network connected from the core to the edge of the network perimeter.
+Network security consists of implementing an IT security policy and deploying network software and hardware to 
+Protect all IT assets & resources, Protect network & infrastructure.
+ensure authorized access through essential components such as Firewalls,IPS,NAC,SIEM,DLP.etc
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
@@ -272,9 +278,12 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <h3>Application Security</h3>
-                  <h4>End-User Education</h4>
                   <p>
-                  
+                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                    There are common challenges organisations face due to the security of modern applications;
+This includes built-in vulnerabilities, third-party and open-source vulnerabilities, 
+Adopting a DevSecOps approach, finding qualified experts. Tethics offers the best practices around the core pillars of application security.
+                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                 </div>
               </div>
@@ -284,7 +293,13 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <h3>Disaster Recovery Planning</h3>
-                  <h4>Cyber Security</h4>
+                  <p>
+                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                    One objective of the Cyber Security Disaster Recovery Plan is to maintain business continuity and re-establish normalcy, 
+                    operations in response to a cyber security incident. Key steps in developing a cyber-security disaster recovery plan include 
+                    sensitive data, assets, risks, testing and stakeholder involvement.
+                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                  </p>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -293,7 +308,10 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <h3>Information Security</h3>
-                  <h4>Cyber Security</h4>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Tethics ensures that information and information systems are protected from unauthorised access, use, disclosure, disruption, 
+alteration or destruction to ensure confidentiality, integrity and availability.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </div>
               </div>
             </div><!-- End testimonial item -->
