--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
-      <h1 class="logo me-auto"><a href="index.html">Tethics<span>.</span></a></h1>
+      <h1 class="logo me-auto"><img src="assets/img/logo.png" /><a href="index.html">Tethics<span>.</span></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt=""></a>-->
 
@@ -65,8 +65,8 @@
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
       <div class="row">
         <div class="col-xl-6">
-          <h1>Cybersecurity, information and</h1>
-          <h2>Network Security is our expertise</h2>
+          <h1>Cybersecurity, information and Network Security is our expertise</h1>
+          <h2></h2>
           <a href="#about" class="btn-get-started scrollto">Get Started</a>
         </div>
       </div>
@@ -352,7 +352,7 @@ alteration or destruction to ensure confidentiality, integrity and availability.
                 </div>
               </div>
               <div class="member-info">
-                <h4>Moseli T’seounyane</h4>
+                <h4>Moseli T'soeunyane</h4>
                 <span>Chief Technology Officer</span>
               </div>
             </div>
