--- a/index.html
+++ b/index.html
@@ -184,43 +184,43 @@
         <div class="row">
           <div class="col-md-6">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <i class="bi bi-briefcase"></i>
+              <i class="bi bi-clipboard-check-fill"></i>
               <h4><a href="#">Penetration Testing</a></h4>
               <p>Network, Web and mobile</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-              <i class="bi bi-card-checklist"></i>
+              <i class="bi bi-info-circle"></i>
               <h4><a href="#">Information Security</a></h4>
               <p>Control Auditing</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-              <i class="bi bi-bar-chart"></i>
+              <i class="bi bi-file-earmark-lock"></i>
               <h4><a href="#">Security Product</a></h4>
               <p>implementation (firewall, SIEM, DLP, SOUR and more...)</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
-              <i class="bi bi-binoculars"></i>
-              <h4><a href="#">Business Continuity management</a></h4>
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="600">
+              <i class="bi bi-twitch"></i>
+              <h4><a href="#">Cybersecurity incident response & Forensic investigation</a></h4>
               <p></p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="500">
-              <i class="bi bi-brightness-high"></i>
+              <i class="bi bi-brightness-alt-high-fill"></i>
               <h4><a href="#">Cybersecurity awareness training</a></h4>
               <p></p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="600">
-              <i class="bi bi-calendar4-week"></i>
-              <h4><a href="#">Cybersecurity incident response & Forensic investigation</a></h4>
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
+              <i class="bi bi-clock-history"></i>
+              <h4><a href="#">Business Continuity management</a></h4>
               <p></p>
             </div>
           </div>
@@ -472,7 +472,7 @@ alteration or destruction to ensure confidentiality, integrity and availability.
               <li><i class="bx bx-chevron-right"></i> <a href="#">Security Products</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Network Protection</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Information Control Auditing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Pentration Testing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Penetration Testing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Cyber security awareness training</a></li>
             </ul>
           </div>
@@ -496,11 +496,7 @@ alteration or destruction to ensure confidentiality, integrity and availability.
           &copy; Copyright <strong><span>Tethics</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/presento-bootstrap-corporate-template/ -->
-          Designed by <a href="#">Divine Amoh</a>
+          Designed by <a href="https://amohelangthoabala.github.io/">Divine Amoh</a>
         </div>
       </div>
       <div class="social-links text-center text-md-end pt-3 pt-md-0">
@@ -508,7 +504,7 @@ alteration or destruction to ensure confidentiality, integrity and availability.
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="linkedin.com/in/tumelo-masasa-6a81b81a5" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
