--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="#about" class="get-started-btn scrollto">Get Started</a>
+      <a href="#team" class="get-started-btn scrollto">Contact Us</a>
     </div>
   </header><!-- End Header -->
 
@@ -67,7 +67,7 @@
         <div class="col-xl-6">
           <h1>Cybersecurity, information and Network Security is our expertise</h1>
           <h2></h2>
-          <a href="#about" class="btn-get-started scrollto">Get Started</a>
+          <a href="#team" class="btn-get-started scrollto">Contact Us</a>
         </div>
       </div>
     </div>
